# oxideav-utvideo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: fuzz.yml
benches/: decode.rs  encode.rs  huffman_lut.rs  predict_slice.rs  rgb_decorrelate.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/decode_utvideo/: seed_ref_gradient_uly4_mode2_s4  seed_ref_ulra_left_grad_s1  seed_ref_ulrg_left_grad_s1  seed_ref_ulrg_median_grad_s1  seed_ref_uly0_left_ramp_s2  seed_ref_uly2_median_grad_s2
fuzz/corpus/encode_utvideo_frame/: ulra_none_4x4_1slice.seed  ulrg_left_4x4_1slice.seed  ulrg_median_8x8_2slices.seed  uly0_left_solid_8x8_1slice.seed  uly0_none_2x2_1slice.seed  uly2_gradient_8x8_2slices.seed  uly4_gradient_32x32_8slices.seed  uly4_median_6x4_2slices.seed
fuzz/corpus/inspect_utvideo/: seed_ref_gradient_uly4_mode2_s1  seed_ref_ulra_none_grad_s1  seed_ref_uly0_left_grad_s1  seed_ref_uly0_left_noise_s4  seed_ref_uly0_median_grad_s1  seed_ref_uly0_none_grad_s1  seed_ref_uly2_left_grad_s1  seed_ref_uly4_left_grad_s1  seed_ref_uly4_median_noise_s4  seed_ref_uly4_none_solid_s1
fuzz/fuzz_targets/: decode_utvideo.rs  encode_utvideo_frame.rs  huffman_codec.rs  inspect_utvideo.rs
src/: decoder.rs  encoder.rs  error.rs  extradata.rs  fourcc.rs  huffman.rs  inspect.rs  lib.rs  predict.rs  predictor.rs  registry.rs  roundtrip_tests.rs
tests/: ffmpeg_encode_interop.rs  ffmpeg_interop.rs  fuzz_seed_corpus_encode.rs  round13_error_taxonomy.rs  round14_decoder_trait_integration.rs  round16_predictor_row_stride.rs  round17_encoder_trait_integration.rs  round18_predictor_heuristic.rs  round21_inspect_frame_layout.rs  round228_inspect_fuzz_properties.rs  round232_huffman_codec_fuzz_properties.rs  round241_slice_header_rows.rs  round244_active_symbol_count.rs  round250_max_code_length.rs  round255_min_code_length.rs  round261_min_code_length_symbol_count.rs  round275_code_length_histogram.rs  round291_kraft_complete.rs  round2_pattern_matrix.rs  round335_strict_padding.rs  round370_kraft_overflow.rs  round382_reference_decode.rs  round3_lut_decode.rs  round4_parallel_decode.rs  round5_parallel_encode.rs  round6_content_fixtures.rs  round7_idempotency.rs  round8_malformed_decode.rs  round9_descriptor_and_api_robustness.rs
tests/fixtures/: utv_64x48_ulra_left.avi  utv_64x48_ulra_median.avi  utv_64x48_ulra_median.gbrap  utv_64x48_ulra_none.avi  utv_64x48_ulrg_left.avi  utv_64x48_ulrg_left.gbrp  utv_64x48_ulrg_median.avi  utv_64x48_ulrg_none.avi  utv_64x48_uly0_left.avi  utv_64x48_uly0_median.avi  utv_64x48_uly0_none.avi  utv_64x48_uly0_none.yuv420p  utv_64x48_uly2_left.avi  utv_64x48_uly2_median.avi  utv_64x48_uly2_median.yuv422p  utv_64x48_uly2_none.avi  utv_64x48_uly4_left.avi  utv_64x48_uly4_median.avi  utv_64x48_uly4_median.yuv444p  utv_64x48_uly4_none.avi  utvideo_rgb_64x48_int_gradient.avi  utvideo_rgb_64x48_int_gradient.gbrp  utvideo_rgb_64x48_int_median.avi
tests/fixtures/reference/: gradient_uly4_mode2_s1.chunk  gradient_uly4_mode2_s4.chunk  manifest.json  ulra_left_grad_s1.chunk  ulra_left_grad_s1.extradata  ulra_left_grad_s1.pixels  ulra_none_grad_s1.chunk  ulrg_left_grad_s1.chunk  ulrg_median_grad_s1.chunk  ulrg_median_grad_s1.extradata  ulrg_median_grad_s1.pixels  uly0_left_grad_s1.chunk  uly0_left_grad_s1.pixels  uly0_left_grad_s128.chunk  uly0_left_grad_s128.extradata  uly0_left_noise_s4.chunk  uly0_left_noise_s4.extradata  uly0_left_noise_s4.pixels  uly0_left_ramp_s2.chunk  uly0_left_ramp_s2.extradata  uly0_left_ramp_s2.pixels  uly0_median_grad_s1.chunk  uly0_median_grad_s8_256.chunk  uly0_median_grad_s8_256.extradata  uly0_median_grad_s8_256.pixels  uly0_none_grad_s1.chunk  uly0_none_grad_s1.extradata  uly2_left_grad_s1.chunk  uly2_left_grad_s1.extradata  uly2_left_oddh_s3.chunk  uly2_left_oddh_s3.extradata  uly2_left_oddh_s3.pixels  uly2_median_grad_s2.chunk  uly2_median_grad_s2.extradata  uly2_median_grad_s2.pixels  uly4_left_grad_s1.chunk  uly4_left_grad_s1.extradata  uly4_median_noise_s4.chunk  uly4_median_noise_s4.extradata  uly4_median_noise_s4.pixels  (+2 more)
