[package]
name = "oxideav-utvideo"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-utvideo"
homepage = "https://github.com/OxideAV/oxideav-utvideo"
authors = ["Mark Karpeles"]
description = "Pure-Rust Ut Video lossless decoder for the oxideav framework"

readme = "README.md"
keywords = ["multimedia", "video", "utvideo", "lossless", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[features]
default = ["registry"]
# Wire the crate's `Decoder` impl + `register(ctx)` entry point into
# `oxideav-core`'s codec registry. Disable for standalone builds that
# want the decoder without dragging in the framework.
registry = ["dep:oxideav-core"]

[dependencies]
oxideav-core = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "huffman_lut"
harness = false

[[bench]]
name = "rgb_decorrelate"
harness = false
